# docs/swagger.json
@@ -769,7 +769,7 @@
         },
         "/api/users/login": {
             "post": {
-                "description": "Authenticate user, set session cookie and return JWT",
+                "description": "Аутентификация и выдача JWT",
                 "consumes": [
                     "application/json"
                 ],
@@ -779,10 +779,10 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Login user",
+                "summary": "Вход пользователя",
                 "parameters": [
                     {
-                        "description": "Credentials",
+                        "description": "Логин и пароль",
                         "name": "credentials",
                         "in": "body",
                         "required": true,
@@ -801,27 +801,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "message: string, data: {token: string, session_id: string}",
+                        "description": "OK",
                         "schema": {
-                            "type": "object"
-                        }
-                    },
-                    "400": {
-                        "description": "error: message",
-                        "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     },
                     "401": {
-                        "description": "error: неверный логин или пароль",
+                        "description": "Unauthorized",
                         "schema": {
-                            "type": "object"
-                        }
-                    },
-                    "500": {
-                        "description": "error: message",
-                        "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -829,25 +821,22 @@
         },
         "/api/users/logout": {
             "post": {
-                "description": "Clear session cookie and remove JWT from Redis",
+                "description": "Удаление JWT и сессии",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "users"
                 ],
-                "summary": "Logout user",
+                "summary": "Выход пользователя",
                 "responses": {
                     "200": {
-                        "description": "message: string",
+                        "description": "OK",
                         "schema": {
-                            "type": "object"
-                        }
-                    },
-                    "400": {
-                        "description": "error: message",
-                        "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -855,14 +844,19 @@
         },
         "/api/users/profile": {
             "get": {
-                "description": "Get profile of the authenticated user",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Получение данных профиля авторизованного пользователя",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "users"
                 ],
-                "summary": "Get user profile",
+                "summary": "Профиль пользователя",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -870,22 +864,24 @@
                             "$ref": "#/definitions/ds.User"
                         }
                     },
-                    "401": {
-                        "description": "error: message",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
-                            "type": "object"
-                        }
-                    },
-                    "500": {
-                        "description": "error: message",
-                        "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
             },
             "put": {
-                "description": "Update profile of the authenticated user",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Обновляет данные авторизованного пользователя",
                 "consumes": [
                     "application/json"
                 ],
@@ -895,10 +891,10 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Update user profile",
+                "summary": "Обновление профиля пользователя",
                 "parameters": [
                     {
-                        "description": "User info",
+                        "description": "Пользователь",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -909,27 +905,39 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "message: string",
+                        "description": "OK",
                         "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "400": {
-                        "description": "error: message",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "401": {
-                        "description": "error: message",
+                        "description": "Unauthorized",
                         "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "500": {
-                        "description": "error: message",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -937,7 +945,7 @@
         },
         "/api/users/register": {
             "post": {
-                "description": "Register a new user with login and password",
+                "description": "Создаёт нового пользователя",
                 "consumes": [
                     "application/json"
                 ],
@@ -947,10 +955,10 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Register a new user",
+                "summary": "Регистрация пользователя",
                 "parameters": [
                     {
-                        "description": "User info",
+                        "description": "Пользователь",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -961,21 +969,27 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "data: registered user",
+                        "description": "Created",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/ds.User"
                         }
                     },
                     "400": {
-                        "description": "error: message",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "500": {
-                        "description": "error: message",
+                        "description": "Internal Server Error",
                         "schema": {
-                            "type": "object"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
